[gd_scene load_steps=8 format=3 uid="uid://2oxdgu03lnbk"]

[ext_resource type="PackedScene" uid="uid://8oy3xm2sff8" path="res://addons/character-controller/fps/fps_controller_3d.tscn" id="1_fbpun"]
[ext_resource type="Script" path="res://addons/character-controller/example/main/player.gd" id="2_8r0nc"]
[ext_resource type="Environment" uid="uid://b3cn01u84faiy" path="res://addons/character-controller/example/main/underwater.tres" id="3_dxksd"]
[ext_resource type="Texture2D" uid="uid://vudj4joi6n60" path="res://assets/Shader_assets/t_flashlightpattern.png" id="4_m54bq"]
[ext_resource type="PackedScene" uid="uid://wy18lh74jnwh" path="res://addons/character-controller/example/main/audios/player_audios.tscn" id="4_ux8kv"]
[ext_resource type="AudioStream" uid="uid://ba5iu4e6mi86u" path="res://audio/Click40.ogg" id="7_1rstu"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_0o3pb"]
resource_local_to_scene = true

[node name="Player" groups=["Jugador"] instance=ExtResource("1_fbpun")]
transform = Transform3D(0.98, 0, 0, 0, 0.98, 0, 0, 0, 0.98, 0, 0, 0)
collision_mask = 23
floor_block_on_wall = false
floor_max_angle = 1.5708
script = ExtResource("2_8r0nc")
input_back_action_name = "move_backward"
input_forward_action_name = "move_forward"
input_left_action_name = "move_left"
input_right_action_name = "move_right"
input_sprint_action_name = "move_sprint"
input_jump_action_name = "move_jump"
input_crouch_action_name = "move_crouch"
input_fly_mode_action_name = "move_fly_mode"
underwater_env = ExtResource("3_dxksd")
LuzLinterna = 5.5
LinternaEncendida = false
mouse_sensitivity = 10.0

[node name="Collision" parent="." index="0" groups=["jugador"]]

[node name="Camera" parent="Head" index="0"]
transform = Transform3D(1.02041, 0, 0, 0, 1.02041, 0, 0, 0, 1.02041, 0, 0, 0)
attributes = SubResource("CameraAttributesPractical_0o3pb")
current = false

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.16612)
light_energy = 3.6
light_projector = ExtResource("4_m54bq")
shadow_enabled = true
spot_range = 12.777
spot_angle = 40.0

[node name="PickPos" type="Marker3D" parent="Head/Camera" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.633)

[node name="PickPuzzle" type="Marker3D" parent="Head/Camera" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.853879)

[node name="pickText" type="Marker3D" parent="Head/Camera" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.314184)

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera" index="4"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
target_position = Vector3(2, 0, 0)
collision_mask = 18
collide_with_areas = true

[node name="ColisionConEnemigo" type="RayCast3D" parent="Head/Camera" index="5"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.234092, 0)
target_position = Vector3(3, 0, 0)
collision_mask = 128
collide_with_areas = true

[node name="ColorRect" type="ColorRect" parent="Head/Camera" index="6"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2

[node name="MirarNpc" type="Marker3D" parent="Head/Camera" index="7"]

[node name="CameraOrigin" type="Marker3D" parent="Head" index="2"]

[node name="Player Audios" parent="." index="9" instance=ExtResource("4_ux8kv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.998993, 0)

[node name="Linterna" type="AudioStreamPlayer" parent="." index="10"]
stream = ExtResource("7_1rstu")
bus = &"FX"
